--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flag-icon-css": "^3.2.1",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "odometer": "^0.4.8",
     "popper.js": "^1.14.3",
     "sweetalert2": "^7.28.11",
     "vee-validate": "^2.1.2",
@@ -56,6 +57,7 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "vue-template-compiler": "^2.5.16",
+    "vue-waypoint": "^3.2.2",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.11.2",
     "webpack-cli": "^3.1.2"
