--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "flag-icon-css": "^3.2.1",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "moment": "^2.22.2",
     "odometer": "^0.4.8",
     "popper.js": "^1.14.5",
     "sweetalert2": "^7.29.0",
