--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "maatwebsite/laravel-nova-excel": "^1.0",
+        "pusher/pusher-php-server": "^3.2",
         "sentry/sentry-laravel": "^0.11.0",
         "spatie/laravel-permission": "^2.20",
         "spatie/nova-backup-tool": "^1.0",
