--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "flag-icon-css": "^3.2.1",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
+    "laravel-echo": "^1.4.1",
     "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "odometer": "^0.4.8",
     "popper.js": "^1.14.5",
+    "pusher-js": "^4.3.1",
     "sweetalert2": "^7.29.0",
     "vee-validate": "^2.1.2",
     "vform": "^1.0.0",
     "vue": "^2.5.16",
+    "vue-echo": "^1.0.2",
     "vue-i18n": "^7.6.0",
     "vue-material-design-icons": "^2.4.0",
     "vue-meta": "^1.5.0",
