--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "buefy": "^0.7.0",
+    "cropperjs": "^1.4.3",
     "flag-icon-css": "^3.2.1",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
@@ -38,6 +39,9 @@
     "vue-material-design-icons": "^2.4.0",
     "vue-meta": "^1.5.0",
     "vue-router": "^3.0.1",
+    "vue-sticky": "^3.3.4",
+    "vue-upload-component": "^2.8.15",
+    "vue2-slideout-panel": "^1.0.8",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
     "wowjs": "^1.1.3"
